# Prevendo-pre-o-das-pizzas-com-ML

./: .gitignore  README.md  app.py  dockerfile  pyproject.toml  requirements.txt
